<?xml version="1.0"?>
<package format="2">
  <name>player3</name>
  <version>0.0.1</version>
  <description>Do not start the game without the player 3!!!</description>
  <maintainer email="malema18@student.aau.dk">Marco Alemao, Philip Moller, Andrei Voica, Dominika Goral, Jakob Hoy, Manuela Mendes, Damian Leporis</maintainer>
  <license>BSD</license>
  <depend>roscpp</depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
